# soggy

./: .gitmodules  Cargo.toml
src/: client.rs  connection.rs  id.rs  lib.rs  macros.rs
src/connection_apis/: http.rs  https.rs  mod.rs  tcp.rs
test/: index.ts  package.json  tsconfig.json
test/public/: index.html
